--- a/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
@@ -34,3 +34,12 @@ body.login-page {
         }
     }
 }
+
+body {
+    > .container {
+        a {
+            text-decoration: underline;
+        }
+    }
+}
+
