--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/tools/surface-new.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/tools/surface-new.vm
@@ -5,16 +5,10 @@
     #parse('_html-head.vm')
     <title>#springMessage('layout.title.constructor')</title>
 </head>
+    #set($siteRoute='/tools/surface')
 <body>
-    #set($navbarMode='tools')
     #parse('_layout-basic-header.vm')
 <div class="container">
-    <h3>#springMessage("constructor.selectEntityToCreate")</h3>
-    <ul>
-        <li>
-            <a href="$cp/constructor/surface">New Surface</a>
-        </li>
-    </ul>
 </div>
 <!-- /container -->
 </body>
