--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-worlds.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-worlds.vm
@@ -2,8 +2,8 @@
 <html>
     $eCdn.setAppZone('/my/worlds')
 <head>
-    #parse('shared/html-head.vm')
-    <title>#springMessage('MyWorldsPage.title')</title>
+    #parse('_html-head.vm')
+    <title>#t('MyWorldsPage.title')</title>
 </head>
 #* @vtlvariable name="worldList" type="java.util.List<waypalm.domain.entity.World>" *#
 <body id="bodyColumns" class="layout-1-4">
@@ -15,10 +15,10 @@
     <div class="center">
         <div class="section content">
             #if($worldList.empty)
-                <p>#springMessage1('MyWorldList.emptyNotice', $cp)</p>
+                <p>#tn('MyWorldList.emptyNotice', [$cp])</p>
             #else
                 #if($eVisitor.worldCreateAvailable)
-                    <p>#springMessage1('MyWorldList.canOwnMore', $cp)</p>
+                    <p>#tn('MyWorldList.canOwnMore', [$cp])</p>
                 #end
                 <div class="float-list">
                     #foreach($world in $worldList)
