--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/tools/area-new.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/tools/area-new.vm
@@ -22,49 +22,40 @@
             <label class="control-label">#t('page.constructor.newArea.form.kind.label')</label>
 
             <div class="controls">
-                <label class="ux-radio area-kind-plain pull-left">
-                    <input type="radio" name="kind" value="PLANE" checked="checked">
-                    <span class="ux-radio-label">
-                        <img src="$themeRoot/img/constructor/kind.plane.png" alt="">
-                        <span class="ux-radio-image-legend">#t('page.constructor.newArea.form.kind.plane')</span>
-                    </span>
+                <select name="kind">
+                    <option value="PLANE">#t('page.constructor.newArea.form.kind.plane')</option>
+                </select>
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label">#t('page.constructor.newArea.form.geometry_plane.axisX')</label>
+
+            <div class="controls">
+                <label class="ux-radio pull-left area-geometry-plain-axisX value-left">
+                    <input type="radio" name="geometryPlain.axisX" value="LEFT">
+                    <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisX.left')</span>
+                </label>
+                <label class="ux-radio pull-left area-geometry-plain-axisX value-right">
+                    <input type="radio" name="geometryPlain.axisX" value="RIGHT" checked="checked">
+                    <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisX.right')</span>
                 </label>
             </div>
         </div>
-        <div class="control-group form-content-for-kind-plain">
-            <label class="control-label">#t('page.constructor.newArea.form.geometry.label')</label>
+        <div class="control-group">
+            <label class="control-label">#t('page.constructor.newArea.form.geometry_plane.axisY')</label>
 
             <div class="controls">
-                <div class="control-group">
-                    <label class="control-label">#t('page.constructor.newArea.form.geometry_plane.axisX')</label>
-
-                    <div class="controls">
-                        <label class="ux-radio pull-left area-geometry-plain-axisX value-left">
-                            <input type="radio" name="geometryPlain.axisX" value="LEFT">
-                            <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisX.left')</span>
-                        </label>
-                        <label class="ux-radio pull-left area-geometry-plain-axisX value-right">
-                            <input type="radio" name="geometryPlain.axisX" value="RIGHT" checked="checked">
-                            <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisX.right')</span>
-                        </label>
-                    </div>
-                </div>
-                <div class="control-group">
-                    <label class="control-label">#t('page.constructor.newArea.form.geometry_plane.axisY')</label>
-
-                    <div class="controls">
-                        <label class="ux-radio pull-left area-geometry-plain-axisY value-up">
-                            <input type="radio" name="geometryPlain.axisY" value="UP">
-                            <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisY.up')</span>
-                        </label>
-                        <label class="ux-radio pull-left area-geometry-plain-axisY value-down">
-                            <input type="radio" name="geometryPlain.axisY" value="DOWN" checked="checked">
-                            <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisY.down')</span>
-                        </label>
-                    </div>
-                </div>
+                <label class="ux-radio pull-left area-geometry-plain-axisY value-up">
+                    <input type="radio" name="geometryPlain.axisY" value="UP">
+                    <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisY.up')</span>
+                </label>
+                <label class="ux-radio pull-left area-geometry-plain-axisY value-down">
+                    <input type="radio" name="geometryPlain.axisY" value="DOWN" checked="checked">
+                    <span class="ux-radio-label">#t('page.constructor.newArea.form.geometry_plane.axisY.down')</span>
+                </label>
             </div>
         </div>
+
         <div class="control-group">
             <div class="controls">
                 <button type="submit" class="btn">#t('page.constructor.newArea.form.submit')</button>
